# N64Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  COVERAGE.md  README.md
RSPRecomp/src/: rsp_recomp.cpp
ares-bridge/: CMakeLists.txt  DESIGN.md  README.md
ares-bridge/include/: ares_bridge.h
ares-bridge/patches/: 0001-rsp-instruction-hook.patch
ares-bridge/server/: ares_oracle_server.cpp
ares-bridge/smoke/: smoke_oracle_boot.cpp
ares-bridge/src/: ares_bridge.cpp  ares_core_glue.cpp  ares_firmware_paths.hpp.in  ares_rsp_ring.cpp
engine-tests/: .gitignore  README.md  run_tests.py
engine-tests/synthetic/: test_rsp_gpr_runtime_persistence.py
engine-tests/unit/: test_ares_bridge_loud_aborts.py  test_ares_bridge_real_glue.py  test_binary_smoke.py  test_buffered_emit.py  test_n64recomp_noargs_handling.py  test_pinned_n64recomp_noargs_segfault.py  test_rsp_gpr_persistence.py  test_tolerant_emit_decls.py
include/: recomp.h
include/recompiler/: context.h
src/: analysis.cpp  analysis.h  config.cpp  config.h  decompressed.cpp  decompressed.h  main.cpp  recompilation.cpp
src/compression/: pers_szp.cpp  pers_szp.h  yay0.cpp  yay0.h
